--- a/proj/demo/package.json
+++ b/proj/demo/package.json
@@ -8,6 +8,9 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@wangeditor/editor": "^5.1.1",
+    "@wangeditor/editor-for-vue": "^5.1.11",
+    "ant-design-vue": "^3.2.5",
     "core-js": "^3.8.3",
     "vue": "^3.2.13"
   },
