--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,7 +25,7 @@ jobs:
 
 
       - name: Install dependencies
-        run: pnpm i
+        run: pnpm ci
 
       - name: Build
         run: pnpm run build
