--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
-    "build2": "tsc -b && vite build",
+    "build": "vite build && node scripts/copy-404.js",
+    "build2": "tsc -b && vite build && node scripts/copy-404.js",
     "lint": "eslint .",
     "preview": "vite preview"
   },
